{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 428,
  "lineage": "95be62ef-7c86-51b5-50aa-5de1d0619956",
  "resources": [
    {
      "mode": "data",
      "type": "google_compute_instance",
      "name": "compute",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]"
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-06-08T05:12:06.614-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/wekaio-rnd/global/firewalls/weka-sg-ssh-0",
            "log_config": [],
            "name": "weka-sg-ssh-0",
            "network": "https://www.googleapis.com/compute/v1/projects/wekaio-rnd/global/networks/weka-vpc-0",
            "priority": 1000,
            "project": "wekaio-rnd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wekaio-rnd/global/firewalls/weka-sg-ssh-0",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "ssh"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-06-08T05:12:18.560-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/wekaio-rnd/global/firewalls/weka-sg-ssh-1",
            "log_config": [],
            "name": "weka-sg-ssh-1",
            "network": "https://www.googleapis.com/compute/v1/projects/wekaio-rnd/global/networks/weka-vpc-1",
            "priority": 1000,
            "project": "wekaio-rnd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wekaio-rnd/global/firewalls/weka-sg-ssh-1",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "ssh"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-06-08T05:12:06.467-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/wekaio-rnd/global/firewalls/weka-sg-ssh-2",
            "log_config": [],
            "name": "weka-sg-ssh-2",
            "network": "https://www.googleapis.com/compute/v1/projects/wekaio-rnd/global/networks/weka-vpc-2",
            "priority": 1000,
            "project": "wekaio-rnd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wekaio-rnd/global/firewalls/weka-sg-ssh-2",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "ssh"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-06-08T05:12:06.647-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/wekaio-rnd/global/firewalls/weka-sg-ssh-3",
            "log_config": [],
            "name": "weka-sg-ssh-3",
            "network": "https://www.googleapis.com/compute/v1/projects/wekaio-rnd/global/networks/weka-vpc-3",
            "priority": 1000,
            "project": "wekaio-rnd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wekaio-rnd/global/firewalls/weka-sg-ssh-3",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "ssh"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "sg_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2022-06-08T05:12:06.612-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/wekaio-rnd/global/firewalls/weka-ag-all-0",
            "log_config": [],
            "name": "weka-ag-all-0",
            "network": "https://www.googleapis.com/compute/v1/projects/wekaio-rnd/global/networks/weka-vpc-0",
            "priority": 1000,
            "project": "wekaio-rnd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wekaio-rnd/global/firewalls/weka-ag-all-0",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "all"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2022-06-08T05:12:06.695-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/wekaio-rnd/global/firewalls/weka-ag-all-1",
            "log_config": [],
            "name": "weka-ag-all-1",
            "network": "https://www.googleapis.com/compute/v1/projects/wekaio-rnd/global/networks/weka-vpc-1",
            "priority": 1000,
            "project": "wekaio-rnd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wekaio-rnd/global/firewalls/weka-ag-all-1",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "all"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2022-06-08T05:12:18.518-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/wekaio-rnd/global/firewalls/weka-ag-all-2",
            "log_config": [],
            "name": "weka-ag-all-2",
            "network": "https://www.googleapis.com/compute/v1/projects/wekaio-rnd/global/networks/weka-vpc-2",
            "priority": 1000,
            "project": "wekaio-rnd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wekaio-rnd/global/firewalls/weka-ag-all-2",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "all"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2022-06-08T05:12:06.422-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/wekaio-rnd/global/firewalls/weka-ag-all-3",
            "log_config": [],
            "name": "weka-ag-all-3",
            "network": "https://www.googleapis.com/compute/v1/projects/wekaio-rnd/global/networks/weka-vpc-3",
            "priority": 1000,
            "project": "wekaio-rnd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wekaio-rnd/global/firewalls/weka-ag-all-3",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "all"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/wekaio-rnd/global/networks/weka-vpc-0",
            "mtu": 1460,
            "name": "weka-vpc-0",
            "project": "wekaio-rnd",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wekaio-rnd/global/networks/weka-vpc-0"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/wekaio-rnd/global/networks/weka-vpc-1",
            "mtu": 1460,
            "name": "weka-vpc-1",
            "project": "wekaio-rnd",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wekaio-rnd/global/networks/weka-vpc-1"
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/wekaio-rnd/global/networks/weka-vpc-2",
            "mtu": 1460,
            "name": "weka-vpc-2",
            "project": "wekaio-rnd",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wekaio-rnd/global/networks/weka-vpc-2"
          }
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/wekaio-rnd/global/networks/weka-vpc-3",
            "mtu": 1460,
            "name": "weka-vpc-3",
            "project": "wekaio-rnd",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wekaio-rnd/global/networks/weka-vpc-3"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-08T05:12:18.926-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/wekaio-rnd/regions/europe-west1/subnetworks/weka-subnet-0",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "weka-subnet-0",
            "network": "https://www.googleapis.com/compute/v1/projects/wekaio-rnd/global/networks/weka-vpc-0",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "wekaio-rnd",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wekaio-rnd/regions/europe-west1/subnetworks/weka-subnet-0",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-08T05:12:07.226-07:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/wekaio-rnd/regions/europe-west1/subnetworks/weka-subnet-1",
            "ip_cidr_range": "10.1.0.0/24",
            "name": "weka-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/wekaio-rnd/global/networks/weka-vpc-1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "wekaio-rnd",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wekaio-rnd/regions/europe-west1/subnetworks/weka-subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-08T05:12:07.368-07:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/wekaio-rnd/regions/europe-west1/subnetworks/weka-subnet-2",
            "ip_cidr_range": "10.2.0.0/24",
            "name": "weka-subnet-2",
            "network": "https://www.googleapis.com/compute/v1/projects/wekaio-rnd/global/networks/weka-vpc-2",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "wekaio-rnd",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wekaio-rnd/regions/europe-west1/subnetworks/weka-subnet-2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-08T05:12:19.073-07:00",
            "gateway_address": "10.3.0.1",
            "id": "projects/wekaio-rnd/regions/europe-west1/subnetworks/weka-subnet-3",
            "ip_cidr_range": "10.3.0.0/24",
            "name": "weka-subnet-3",
            "network": "https://www.googleapis.com/compute/v1/projects/wekaio-rnd/global/networks/weka-vpc-3",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "wekaio-rnd",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/wekaio-rnd/regions/europe-west1/subnetworks/weka-subnet-3",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}